Promises: implementando um mecanismo de retry

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>App</title>
   </head>
   <body>
+    <button id="btn">Import</button>
     <script type="module" src="js/app.js"></script>
   </body>
 </html>
